fixes navbar gap at mobile views, fixes cta landing page image gaps

--- a/client/src/components/landingpage.scss
+++ b/client/src/components/landingpage.scss
@@ -26,11 +26,11 @@ a:focus {
   }
 }
 
+
 ///////////// CTA ///////////////////
 
 .cta-content {
   display: flex;
-
   padding: 0 5%;
   width: 110%;
   background-color: #ffdec2;
@@ -47,7 +47,7 @@ a:focus {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 70px 50px 50px 35px;
+    margin: 50px 0px 60px 10px;
     @include media-breakpoint-down(md) {
       p{
         font-size: 1.2rem;
@@ -68,12 +68,11 @@ a:focus {
 
   @include media-breakpoint-down(sm) {
     display: block;
-    height: 500px;
     background-image: url("../images/bee-img-mobile.jpg");
     background-repeat: no-repeat;
     background-size: contain;
     overflow: hidden;
-    margin-top: 110px;
+    // margin-top: 110px;
     padding: 0;
   }
 
@@ -122,6 +121,8 @@ a:focus {
   text-align: left;
   line-height: 54px;
   padding-left: 5px;
+  padding-right: 50px;
+  padding-bottom: 10px;
   @include media-breakpoint-down(sm) {
     overflow: hidden;
     font-size: 25px;
@@ -132,11 +133,12 @@ a:focus {
 
 .cta-text2 {
   font-family: "Nunito", sans-serif;
-  color: #494949;
-  font-size: 26px;
-  line-height: 35px;
+  color:  #ff851a;
+  font-size: 24px;
+  line-height: 32px;
   text-align: left;
   margin-right: 50px;
+  padding-bottom: 20px;
   @include media-breakpoint-down(sm) {
     overflow: hidden;
     font-size: 16px;
@@ -149,6 +151,7 @@ a:focus {
 
 .join-btn-div {
   width: 100%;
+  color:  #ff851a;
   @include media-breakpoint-down(sm) {
     text-align: center;
   }
@@ -167,7 +170,8 @@ a:focus {
 }
 
 .bee-img {
-  width: 45%;
+  margin-right: -30px;
+  width: 50%;
   float: right;
 }
 
@@ -231,8 +235,11 @@ a:focus {
 // Upper content ID's
 
 #one {
-  padding-top: 20px;
-  padding-bottom: 50px;
+  padding: 20px 60px 50px 40px;
+
+  .img-content {
+    margin-right: 15%;
+  }
 
   @include media-breakpoint-down(sm) {
     flex-direction: column-reverse;
@@ -246,6 +253,15 @@ a:focus {
   border-top: 1px solid #ff851a;
   border-bottom: 1px solid #ff851a;
 
+  .img-content {
+  margin-right: 6%;
+
+  }
+
+  .text-content {
+    margin-right: 7%;
+  }
+
   @include media-breakpoint-down(sm) {
     flex-direction: column-reverse;
     border: none;
@@ -254,8 +270,18 @@ a:focus {
 }
 
 #three {
-  padding-top: 50px;
-  padding-bottom: 60px;
+  padding: 60px 0;
+  // padding-right: 60px;
+
+  .text-content {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+  .post-example {
+    margin-left: 30px;
+    margin-right: 110px;
+  }
 
   @include media-breakpoint-down(sm) {
     flex-direction: column-reverse;
@@ -278,7 +304,7 @@ a:focus {
     width: 100%;
   }
   .img-content {
-    width: 100%;
+    // width: 100%;
   }
 
   .category-example {
